# NN-CUDA-CR

./: .gitignore  CMakeLists.txt  README.md
include/: cpu_computing.h  cuda_computing.cuh
src/: cpu_computing.cpp  cuda_computing.cu  main.cpp
